--- a/public/css/lottery.css
+++ b/public/css/lottery.css
@@ -10,7 +10,7 @@
     -webkit-font-smoothing: antialiased;
     min-width: 300px;
 	text-rendering: optimizeLegibility;
-	padding: 4%;
+	padding: 15px 10px;
 	min-height: 100%;
     box-sizing: border-box;
 }
@@ -27,10 +27,10 @@
 	}
 
 	.dh-icon > svg {
-		height: 64px;
-		width: 64px;
-		color: #FFC825;
-		margin: 18px;
+		height: 36px;
+    	width: 36px;
+    	color: #FFC825;
+    	margin: 12px;
 	}
 
 	.is-mac .dh-icon-dice {
@@ -114,8 +114,8 @@
 .dh-lottery .avatar .image {
 	margin: 0 auto;
 	display: inline-block;
-	height: 32px;
-  width: 32px;
+	height: 48px;
+  width: 48px;
   position: relative;
 }
 
@@ -133,8 +133,8 @@
 	border: 4px solid #FFF;
 	border-radius: 100%;
 	box-sizing: content-box;
-	height: 32px;
-	width: 32px;
+	height: 48px;
+	width: 48px;
 	/*box-shadow: 0 0 100px 3000px rgba(10, 10, 10, 0.3);*/
 }
 
@@ -147,14 +147,14 @@
 
 .dh-lottery .actions .button {
 	display: block;
-	width: 100px;
-	height: 100px;
-	line-height: 100px;
+	width: 60px;
+	height: 60px;
+	line-height: 60px;
 	text-align: center;
 	border-radius: 80px;
 	font-size: 56px;
 	cursor: hand;
-	margin-right: 20px;
+	margin-left: 20px;
 }
 
 .dh-lottery .actions .button.primary{
@@ -217,16 +217,14 @@
 	cursor: pointer;
 	display: inline-block;
 	font-size: 1rem;
-	height: 20px;
 	outline: none;
 	position: relative;
 	vertical-align: top;
-	width: 20px;
 	background: none;
 	height: 40px;
 	position: absolute;
-	right: 20px;
-	top: 20px;
+	right: 10px;
+	top: 12px;
 	width: 40px;
   }
 
@@ -289,6 +287,7 @@
 	display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    padding: 0 5%;
 }
 
 .dh-modal-background {
@@ -310,18 +309,21 @@
   padding: 5%;
   display: flex;
   flex-flow: column;
+  margin-top: 60px;
 }
 
 .dh-modal-content.dh-morewinner {
   flex-flow: row wrap;
+  padding: 5% 0;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .dh-modal-content .profile-item{
 	display: block;
 	font-size: 50px;
-	padding: 2vh 5%;
+	padding: 6px;
 	text-align: left;
-	min-height: 2.5em;
 }
 
 .dh-modal-content.dh-solowinner .profile-item{
@@ -335,22 +337,25 @@
 }
 
 .dh-modal-content.dh-morewinner .profile-item{
-	width: 50%;
   float: left;
   box-sizing: border-box;
+      width: 25%;
+      display: flex;
+    flex-direction: column;
+        padding-top: 15px;
 }
 
 .dh-modal-content .avatar-image{
 	float: left;
 	position: relative;
-  margin-right: 5%;
-  width: 256px;
-  height: 256px;
+  margin-right: auto;
+  width: 60px;
+  height: 60px;
 }
 
 .dh-modal-content.dh-morewinner .avatar-image{
-  width: 142px;
-  height: 142px;
+  width: 60px;
+  height: 60px;
 }
 
 .dh-modal-content .avatar-image>h1 {
@@ -358,37 +363,34 @@
     display: inline-block;
     z-index: 2;
     position: absolute;
-    top: -64px;
+    top: -34px;
     left: 50%;
     transform: rotate(5deg);
     overflow: hidden;
     margin: 0;
-    margin-left: -40px;
+    margin-left: -24px;
     width: 100px;
 }
 
 .dh-modal-content .avatar-image svg{
-	width: 72px;
-	height: 72px;
+	width: 36px;
+	height: 36px;
 }
 
 .dh-modal-content .avatar-image>img {
   width: 100%;
   height: 100%;
 	border-radius: 100%;
-	border: 6px solid #FFC825;
+	border: 3px solid #FFC825;
 	box-sizing: border-box
 }
 
 .dh-modal-content .profile-name {
-	font-size: 1em;
+	font-size: 16px;
 	color: #eee;
 	margin: 0 0 16px 0;
-	font-weight: 600;
-	overflow: hidden;
-	text-overflow:ellipsis;
-	white-space: nowrap;
-	min-height: 80px;
+	font-weight: normal;
+	    overflow: hidden;
 }
 
 .dh-modal-content .profile-subtitle {
@@ -400,6 +402,7 @@
 	text-overflow:ellipsis;
 	white-space: nowrap;
 	min-height: 60px;
+	display: none;
 }
 
 .dh-modal-content .profile-desc {
@@ -410,11 +413,7 @@
 	overflow: hidden;
 	text-overflow:ellipsis;
 	white-space: nowrap;
-}
-
-.dh-modal-close {
-	height: 86px;
-	width: 86px
+	display: none;
 }
 
 #dh-lottery-history .dh-modal-content{
@@ -425,35 +424,39 @@
 }
 
 #dh-lottery-history .dh-history-item{
-	padding: 20px;
+	padding: 0 10px 15px;
 	border-bottom: solid 1px rgba(255, 255, 255, .3);
 }
 
 #dh-lottery-history .dh-history-item .dh-history-info{
 	text-align: left;
-	padding-bottom: 20px;
+	padding: 0 10px;
 }
 
 #dh-lottery-history .dh-history-item .dh-history-info p{
-	line-height: 48px;
+	line-height: 40px;
 }
 
 #dh-lottery-history .dh-history-item .dh-history-info h1{
 	float: left;
 	padding-right: 20px;
-	font-size: 40px;
-    line-height: 48px;
+	font-size: 20px;
+    line-height: 40px;
 }
 
 #dh-lottery-history .dh-history-item .dh-history-user{
 	width: 100%;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 #dh-lottery-history .dh-history-item .dh-history-user>div{
 	display: inline-block;
-	padding: 1vw;
-	width: 180px;
+	padding: 6px;
+	width: 25%;
 	text-align: center;
+	overflow: hidden;
 }
 
 #dh-lottery-history .dh-history-item .dh-history-user .avatar{
@@ -476,24 +479,37 @@
 	outline: none;
 	position: relative;
 	vertical-align: top;
-	width: 100px;
+	width: 40px;
 	height: 40px;
 	color: #fff;
 	border: 1px solid #fff;
 	text-align: center;
 	line-height: 38px;
+	margin: 5px;
+}
+
+.dh-number.dh-modal-btn {
+	width: 25%;
 }
 
 .dh-history-clean{
 	position: absolute;
-	right: 120px;
-	top: 42px;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 20px;
+    width: 50%;
+    margin: 0;
+    display: none;
 }
 
 .dh-modal-config-number{
-	position: absolute;
-	right: 250px;
-	top: 42px;
+    position: absolute;
+    right: 5%;
+    top: 65px;
+    width: calc(90%);
+    display: flex;
+    justify-content: center;
+    display: none;
 }
 
 
