--- a/public/css/lottery.css
+++ b/public/css/lottery.css
@@ -10,7 +10,7 @@
     -webkit-font-smoothing: antialiased;
     min-width: 300px;
 	text-rendering: optimizeLegibility;
-	padding: 15px 10px;
+	padding: 20px 10px 15px;
 	min-height: 100%;
     box-sizing: border-box;
 }
@@ -30,7 +30,7 @@
 		height: 36px;
     	width: 36px;
     	color: #FFC825;
-    	margin: 12px;
+    	margin: 7px;
 	}
 
 	.is-mac .dh-icon-dice {
@@ -128,9 +128,9 @@
 #dh-lottery-selector .image {
 	display: none;
 	position: absolute;
-	left: 0;
-	top: 0;
-	border: 4px solid #FFF;
+	left: 1px;
+	top: 1px;
+	border: 3px solid #FFF;
 	border-radius: 100%;
 	box-sizing: content-box;
 	height: 48px;
@@ -139,22 +139,21 @@
 }
 
 .dh-lottery .actions {
-	position: absolute;
-	right: 20px;
-	bottom: 20px;
-	display: flex;
+    margin: 40px 0;
+    display: flex;
+    justify-content: center;
 }
 
 .dh-lottery .actions .button {
 	display: block;
-	width: 60px;
-	height: 60px;
-	line-height: 60px;
+	width: 100px;
+	height: 50px;
+	line-height: 50px;
 	text-align: center;
-	border-radius: 80px;
+	border-radius: 15px;
 	font-size: 56px;
 	cursor: hand;
-	margin-left: 20px;
+	margin: 0 10px;
 }
 
 .dh-lottery .actions .button.primary{
@@ -200,7 +199,7 @@
     flex-grow: 1;
     -ms-flex-negative: 1;
     flex-shrink: 1;
-    padding: 1vw;
+    padding: 6px;
 }
 
 .dh-modal-close{
@@ -356,6 +355,7 @@
 .dh-modal-content.dh-morewinner .avatar-image{
   width: 60px;
   height: 60px;
+  margin: 0 auto;
 }
 
 .dh-modal-content .avatar-image>h1 {
@@ -363,18 +363,18 @@
     display: inline-block;
     z-index: 2;
     position: absolute;
-    top: -34px;
+    top: -27px;
     left: 50%;
-    transform: rotate(5deg);
+    transform: rotate(10deg);
     overflow: hidden;
     margin: 0;
-    margin-left: -24px;
+    margin-left: -19px;
     width: 100px;
 }
 
 .dh-modal-content .avatar-image svg{
-	width: 36px;
-	height: 36px;
+	width: 30px;
+	height: 30px;
 }
 
 .dh-modal-content .avatar-image>img {
@@ -386,11 +386,12 @@
 }
 
 .dh-modal-content .profile-name {
-	font-size: 16px;
+	font-size: 14px;
 	color: #eee;
-	margin: 0 0 16px 0;
+	margin: 5px 0 16px 0;
 	font-weight: normal;
 	    overflow: hidden;
+	    text-align: center;
 }
 
 .dh-modal-content .profile-subtitle {
@@ -421,10 +422,11 @@
 	overflow-x: hidden;
 	width: 100%;
 	color: #fff;
+	padding: 0;
 }
 
 #dh-lottery-history .dh-history-item{
-	padding: 0 10px 15px;
+	padding: 0 0 15px;
 	border-bottom: solid 1px rgba(255, 255, 255, .3);
 }
 
@@ -435,6 +437,8 @@
 
 #dh-lottery-history .dh-history-item .dh-history-info p{
 	line-height: 40px;
+	margin-top: 15px;
+	margin-bottom: 8px;
 }
 
 #dh-lottery-history .dh-history-item .dh-history-info h1{
@@ -453,18 +457,27 @@
 
 #dh-lottery-history .dh-history-item .dh-history-user>div{
 	display: inline-block;
-	padding: 6px;
+	padding: 8px 6px;
 	width: 25%;
 	text-align: center;
 	overflow: hidden;
+	font-size: 14px;
 }
 
 #dh-lottery-history .dh-history-item .dh-history-user .avatar{
 	border-radius: 100%;
+	margin-bottom: 5px;
+}
+
+#dh-lottery-history .dh-history-item .dh-history-user .name{
+	font-weight: 400;
+	font-size: 14px;
 }
 
 .dh-history-user .avatar .avatar-image{
   float: none;
+	height: 60px;
+    width: 60px;
 }
 
 .dh-modal-btn{
