--- a/public/css/lottery.css
+++ b/public/css/lottery.css
@@ -61,7 +61,7 @@
 	}
 
 .running-lottery .dh-lottery .profile{
-	opacity: 0.4;
+	opacity: 0.6;
 	transition: all 0.5s;
 }
 
@@ -114,12 +114,11 @@
 	margin: 0 auto;
 	display: inline-block;
 	height: 48px;
-  width: 48px;
+  width: 36px;
   position: relative;
 }
 
 .dh-lottery .avatar .image img {
-	border-radius: 100%;
 	height: 100%;
 	width: 100%;
 }
@@ -129,11 +128,10 @@
 	position: absolute;
 	left: 1px;
 	top: 1px;
-	border: 3px solid #FFF;
-	border-radius: 100%;
+	border: 3px solid #00d1b2;
 	box-sizing: content-box;
 	height: 48px;
-	width: 48px;
+	width: 36px;
 	/*box-shadow: 0 0 100px 3000px rgba(10, 10, 10, 0.3);*/
 }
 
@@ -339,6 +337,10 @@
 	border: 4px solid #FFC825;
 }
 
+.dh-modal-content.dh-solowinner .loser-item .avatar-image>img {
+	border: none;
+}
+
 .dh-modal-content.dh-morewinner .profile-item{
   float: left;
   box-sizing: border-box;
@@ -383,7 +385,6 @@
 .dh-modal-content .avatar-image>img {
   width: 100%;
   height: 100%;
-	border-radius: 100%;
 	border: 3px solid #FFC825;
 	box-sizing: border-box
 }
@@ -480,7 +481,7 @@
 .dh-history-user .avatar .avatar-image{
   float: none;
 	height: 60px;
-    width: 60px;
+    width: 45px;
 }
 
 .dh-modal-btn{
