--- a/public/css/lottery.css
+++ b/public/css/lottery.css
@@ -9,37 +9,26 @@
     -webkit-font-smoothing: antialiased;
     min-width: 300px;
 	text-rendering: optimizeLegibility;
-	padding: 170px 10px 15px;
+	padding: 130px 10px 15px;
 	min-height: 100%;
     box-sizing: border-box;
-    background-image: url("/img/bg.png");
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
+
 }
 
-@media (max-width: 768px) {
-	.dh-lottery {
-		padding-top: 330px;
-	}
+.header {
+	position: fixed;
+    width: 100%;
+    text-align: center;
+    height: 130px;
+    z-index: 1000;
+    background: #000;
 }
 
-@media (max-width: 414px) {
-	.dh-lottery {
-		padding-top: 170px;
-	}
-}
-
-@media (max-width: 375px) {
-	.dh-lottery {
-		padding-top: 150px;
-	}
-}
-
-@media (max-width: 320px) {
-	.dh-lottery {
-		padding-top: 130px;
-	}
+.header img {
+	width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .dh-lottery *{
@@ -156,7 +145,7 @@
 	position: absolute;
 	left: 1px;
 	top: 1px;
-	border: 3px solid #00d1b2;
+	border: 3px solid #efbf5b;
 	box-sizing: content-box;
 	height: 60px;
 	width: 42px;
