--- a/public/css/lottery.css
+++ b/public/css/lottery.css
@@ -145,7 +145,7 @@
 	position: absolute;
 	left: 1px;
 	top: 1px;
-	border: 3px solid #efbf5b;
+	border: 3px solid #FFC825;
 	box-sizing: content-box;
 	height: 60px;
 	width: 42px;
@@ -335,7 +335,17 @@
 	display: block;
 	font-size: 50px;
 	padding: 6px;
-	text-align: left;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -80%);
+    left: 50%;
+    width: 100%;
+}
+
+.dh-modal-content .profile-item .winner-cotent {
+	color: #FFC825;
 }
 
 .dh-modal-content.dh-solowinner .profile-item{
@@ -346,7 +356,7 @@
   text-align: center;
   float: none;
   margin: 0 auto;
-  width: 120px;
+  width: 90px;
     height: 120px;
 }
 
@@ -365,6 +375,11 @@
       display: flex;
     flex-direction: column;
         padding-top: 15px;
+}
+
+.dh-lottery-winner .dh-modal-content .avatar-image {
+	width: 90px;
+  height: 120px;
 }
 
 .dh-modal-content .avatar-image{
@@ -386,12 +401,11 @@
     display: inline-block;
     z-index: 2;
     position: absolute;
-    top: -45px;
+    top: -48px;
     left: 50%;
-    transform: rotate(10deg);
     overflow: hidden;
     margin: 0;
-    margin-left: -20px;
+    transform: translateX(-50%);
 }
 
 .dh-modal-content .avatar-image svg{
@@ -402,8 +416,7 @@
 .dh-modal-content .avatar-image>img {
   width: 100%;
   height: 100%;
-	border: 3px solid #FFC825;
-	box-sizing: border-box
+	box-sizing: border-box;
 }
 
 .dh-modal-content .profile-name {
