--- a/public/css/lottery.css
+++ b/public/css/lottery.css
@@ -337,11 +337,6 @@
 	padding: 6px;
     color: #fff;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -80%);
-    left: 50%;
-    width: 100%;
 }
 
 .dh-modal-content .profile-item .winner-cotent {
@@ -360,12 +355,32 @@
     height: 120px;
 }
 
+#dh-lottery-winner .dh-modal-content {
+	    padding: 5%;
+}
+
 .dh-modal-content.dh-solowinner .avatar-image>img {
 	border: 4px solid #FFC825;
 }
 
 .dh-modal-content.dh-solowinner .loser-item .avatar-image>img {
 	border: none;
+}
+
+.dh-modal-content .loser-item .loser-cotent {
+	font-size: 50px !important;
+	color: #fff;
+	margin-top: 10px;
+}
+
+@media (max-width: 320px;) {
+	font-size: 40px !important;
+}
+
+.dh-modal-content .profile-item .winner-cotent {
+	font-size: 50px !important;
+	color: #FFC825;
+	margin-top: 10px;
 }
 
 .dh-modal-content.dh-morewinner .profile-item{
@@ -390,10 +405,20 @@
   height: 60px;
 }
 
+#dh-lottery-winner .profile-item>.avatar-image {
+	height: 300px;
+    max-width: 100%;
+    width: auto;
+}
+
 .dh-modal-content.dh-morewinner .avatar-image{
   width: 60px;
   height: 60px;
   margin: 0 auto;
+}
+
+.dh-modal-content .avatar-image .avatar {
+	padding-top: 20px;
 }
 
 .dh-modal-content .avatar-image>h1 {
@@ -401,7 +426,7 @@
     display: inline-block;
     z-index: 2;
     position: absolute;
-    top: -48px;
+    top: -28px;
     left: 50%;
     overflow: hidden;
     margin: 0;
@@ -414,8 +439,10 @@
 }
 
 .dh-modal-content .avatar-image>img {
-  width: 100%;
-  height: 100%;
+  	width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 	box-sizing: border-box;
 }
 
@@ -426,6 +453,17 @@
 	font-weight: normal;
 	    overflow: hidden;
 	    text-align: center;
+}
+
+#dh-lottery-winner .dh-modal-content .profile-name {
+	font-size: 20px;
+	color: #fff;
+}
+
+#dh-lottery-winner .loser-item .avatar {
+	height: 100%;
+    width: 100%;
+    padding-top: 0;
 }
 
 .dh-modal-content .profile-subtitle {
